--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 
+@theme{
+    --color-school-blue: #C3EBFA;
+    --color-school-blue-light: #EDF9FD; 
+    --color-school-purple: #CFCEFF; 
+    --color-school-purple-Light: #F1F0FF; 
+    --color-school-yellow: #FAE27C; 
+    --color-school-yellow-light: #FEFCE8; 
+}
