--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,18 @@
     --color-school-yellow: #FAE27C; 
     --color-school-yellow-light: #FEFCE8; 
 }
+
+.react-calendar{
+    width: 100% !important;
+    border: none  !important;
+    font-family: "Inter", sans-serif !important;
+}
+
+.react-calendar__navigation__label__labelText{
+    font-weight: 600;
+}
+
+.react-calendar_tile-active{
+    background-color: #C3EBFA !important;
+    color: black !important;
+}
